<resources>
    <string name="app_name">BMI Calculator</string>

    <!--Title-->
    <string name="title">BMI Calculator</string>

    <!--Buttons-->
    <string name="ref1">WHO, 1997</string>
    <string name="ref2">CDC, 2020</string>
    <string name="calculate">calculate</string>

    <!--Input-->
    <string name="height">eg: 1.70m</string>
    <string name="weight">eg: 70kg</string>

    <!--Input description-->
    <string name="source_description">Source</string>
    <string name="h_description">Type the height</string>
    <string name="w_description">Type the weight</string>

    <!--Nutritional status-->
    <string name="u3">Underweight grade III</string>
    <string name="u2">Underweight grade II</string>
    <string name="u1">Underweight grade I</string>
    <string name="nw">Normal weight\n(Healthy weight)</string>
    <string name="pre">Overweight</string>
    <string name="o1">Obesity grade I</string>
    <string name="o2">Obesity grade II</string>
    <string name="o3">Obesity grade III</string>

    <string name="uw">Underweight</string>
    <string name="ob">Obesity</string>

    <!--References-->
    <string name="ref_who97">Source: WHO, 1997 - BMI classification for adults over 20 years old.</string>
    <string name="ref_cdc20">Source: CDC, 2020 - BMI classification for adults over 20 years old.</string>

    <!--Messages-->
    <string name="no_input">Please, type the weight and the height.</string>
    <string name="zero_input">Input value is 0 (zero).</string>
    <string name="w_out_of_bounds">Please, type a weight between 10kg to 600kg.</string>
    <string name="h_out_of_bounds">Please, type a height between 0.20m to 3.00m.</string>
</resources>